--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ wandb = "^0.15.12"
 scikit-learn = "^1.3.1"
 matplotlib = "^3.8.0"
 open-clip-torch = "^2.22.0"
+transformers = "^4.34.0"
 
 [[tool.poetry.source]]
 name = "torch"
